Fixed alignment

--- a/src/app/tl-header/tl-header.component.scss
+++ b/src/app/tl-header/tl-header.component.scss
@@ -52,10 +52,6 @@
         font-size: 16px;
        }
 
-      .hours wvr-dropdown-menu-item {
-        text-align: center;
-      }
-
       .libraries {
 
         .libraries-link {
